--- a/task_config_template.cfg
+++ b/task_config_template.cfg
@@ -18,6 +18,27 @@ patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'Train-accuracy=(\d+\.\d+|\d+)'
 metrics = ['speed', 'training_acc', 'total_training_time', 'validation_acc','Train-top_k_accuracy_5','Validation-top_k_accuracy_5']
 compute_method = ['average', 'last', 'total', 'last','last','last']
 
+[mkl_resnet18_cifar10_symbolic]
+patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'Train-accuracy=(\d+\.\d+|\d+)', 'Time cost=(\d+\.\d+|\d+)', 'Validation-accuracy=(\d+\.\d+|\d+)' ]
+metrics = ['speed', 'training_acc', 'total_training_time', 'validation_acc']
+compute_method = ['average', 'last', 'total', 'last']
+command_to_execute = python image_classification/image_classification.py --model resnet18_v2 --dataset cifar10 --mode symbolic --gpus 0 --epochs 20 --log-interval 50 --kvstore device
+num_gpus = 0
+
+[mkl_resnet18_cifar10_hybrid]
+patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'training: accuracy=(\d+\.\d+|\d+)', 'validation: accuracy=(\d+\.\d+|\d+)', 'time cost: (\d+\.\d+|\d+)']
+metrics = ['speed', 'training_acc', 'validation_acc', 'total_training_time']
+compute_method = ['average', 'last', 'last', 'total']
+command_to_execute = python image_classification/image_classification.py --model resnet18_v2 --dataset cifar10 --mode hybrid --gpus 0 --epochs 20 --log-interval 50 --kvstore device
+num_gpus = 0
+
+[mkl_resnet18_cifar10_imperative]
+patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'training: accuracy=(\d+\.\d+|\d+)', 'validation: accuracy=(\d+\.\d+|\d+)', 'time cost: (\d+\.\d+|\d+)']
+metrics = ['speed', 'training_acc', 'validation_acc', 'total_training_time']
+compute_method = ['average', 'last', 'last', 'total']
+command_to_execute = python image_classification/image_classification.py --model resnet18_v2 --dataset cifar10 --gpus 0 --epochs 20 --log-interval 50 --kvstore device
+num_gpus = 0
+
 [resnet50_cifar10_symbolic]
 patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'Train-accuracy=(\d+\.\d+|\d+)', 'Time cost=(\d+\.\d+|\d+)', 'Validation-accuracy=(\d+\.\d+|\d+)' ]
 metrics = ['speed', 'training_acc', 'total_training_time', 'validation_acc']
