adding inference to config

--- a/task_config_template.cfg
+++ b/task_config_template.cfg
@@ -18,6 +18,13 @@ patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'Train-accuracy=(\d+\.\d+|\d+)'
 metrics = ['speed', 'training_acc', 'total_training_time', 'validation_acc','Train-top_k_accuracy_5','Validation-top_k_accuracy_5']
 compute_method = ['average', 'last', 'total', 'last','last','last']
 
+[mkl_resnet18_cifar10_symbolic_inference]
+patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'Test-accuracy=(\d+\.\d+|\d+)', 'Time cost=(\d+\.\d+|\d+)']
+metrics = ['speed', 'training_acc', 'total_training_time', 'validation_acc']
+compute_method = ['average', 'last', 'total']
+command_to_execute = python image_classification/image_classification.py --model resnet18_v2 --use-pretrained --dataset cifar10 --mode symbolic --infer True --gpus 0 --log-interval 50 --kvstore local
+num_gpus = 0
+
 [mkl_resnet18_cifar10_symbolic]
 patterns = ['Speed: (\d+\.\d+|\d+) samples/sec', 'Train-accuracy=(\d+\.\d+|\d+)', 'Time cost=(\d+\.\d+|\d+)', 'Validation-accuracy=(\d+\.\d+|\d+)' ]
 metrics = ['speed', 'training_acc', 'total_training_time', 'validation_acc']
